# IR-Project

./: Readme.md  command.md
.devcontainer/: devcontainer.json
adaptive-rag/src/: adaptive_rag.ipynb
autonomus-rag/src/: answer_synthesis.ipynb  chain_of_thoughts.ipynb  iterative_retrieval.ipynb  query_planning_decomposition.ipynb  self_reflection.ipynb
cache-augmented-rag/: pyproject.toml
corrective-rag/: requirements.txt
corrective-rag/src/: corrective_rag.ipynb
data-ingestion/: .gitignore  DATA_COLLECTION_PLAN.md  README.md  chunking_demo.ipynb  pyproject.toml  requirements.txt
data-ingestion/src/: core.ipynb  csv_excel_parsing.ipynb  data_parsing_doc.ipynb  data_parsing_pdf.ipynb  database_parsing.ipynb  json_parsing.ipynb  (+1 more)
e2e-project/: main.py
hybrid-search-strategies/: pyproject.toml  requirements.txt
langgraph/: pyproject.toml  requirements.txt
multi-model-openai/: pyproject.toml  requirements.txt
query-enhancement/: command.md  pyproject.toml  requirements.txt
rag-implementation/: pyproject.toml
vector-embeddings/: README.md  pyproject.toml  requirements.txt
vector-embeddings/src/: embeddings.ipynb  openai_embeddings.ipynb  vector-representation.ipynb
vector-store-database/: README.md  pyproject.toml  requirements.txt
vector-store-database/src/: astradb-vector-database.ipynb  chromadb-vector-store.ipynb  faiss-vector-store.ipynb  other-vector-stores.ipynb  pinecone-vector-database.ipynb
vector-store-database/src/chroma_db/: chroma.sqlite3
vector-store-database/src/data/chroma_db/: chroma.sqlite3
vector-store-database/src/data/faiss_index/: index.faiss  index.pkl
(+29 files in other folders)
